[gd_scene load_steps=5 format=3 uid="uid://cqv6kk4f2syya"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_cjf8s"]
[ext_resource type="FontFile" uid="uid://dfsorkkiutvi8" path="res://Scripts/Files/Xolonium-Regular.ttf" id="2_v5qhf"]

[sub_resource type="InputEventKey" id="InputEventKey_ihgde"]
keycode = 32

[sub_resource type="Shortcut" id="Shortcut_7t7nc"]
events = [SubResource("InputEventKey_ihgde")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_cjf8s")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_top = 20.0
offset_right = 22.5
offset_bottom = 98.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_v5qhf")
theme_override_font_sizes/font_size = 64
text = "0"
metadata/_edit_use_anchors_ = true

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.5
offset_top = -79.5
offset_right = 306.5
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_v5qhf")
theme_override_font_sizes/font_size = 64
text = "Dodge the
creeps!"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -165.0
offset_top = -170.0
offset_right = 165.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_v5qhf")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_7t7nc")
text = "Start"
metadata/_edit_use_anchors_ = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
